[package]
name = "monero"
version = "0.21.0"
authors = ["Monero Rust Contributors", "h4sh3d <h4sh3d@protonmail.com>"]
documentation = "https://docs.rs/monero"
edition = "2021"
homepage = "https://github.com/monero-rs/monero-rs"
include = [
  "src/*",
  "README.md",
  "CHANGELOG.md",
  "LICENSE",
]
keywords = ["monero"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/monero-rs/monero-rs"
rust-version = "1.63.0"
description = "Rust Monero Library."

[features]
default = ["full"]
full = ["fixed-hash/std", "fixed-hash/rand"]
serde = ["serde-crate", "serde-big-array", "curve25519-dalek/serde"]
experimental = []
fuzzing = []

[dependencies]

[dev-dependencies]
quickcheck = "1"
rand = "0.8"
serde_json = "1"
serde_test = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
